syntax = "proto3";

package model;

option go_package = "github.com/PhilippWegner/hochschule-bochum-masterarbeit/microservices-with-grpc/grpc-api/model";

service ModelService {
    rpc GetPlcs(GetPlcsRequest) returns (GetPlcsResponse) {}
    rpc GetStates(GetStatesRequest) returns (GetStatesResponse) {}
    rpc CreateStates(CreateStatesRequest) returns (CreateStatesResponse) {}
}


message Plc {
    string time = 1;
    string machine = 2;
    repeated Identifier identifier = 3;
}

message Identifier {
    string name = 1;
    double value = 2;
}

message GetPlcsRequest {
    string machine = 1;
    string time = 2;
    int32 limit = 3;
}

message GetPlcsResponse {
    repeated Plc plcs = 1;
}

message GetStatesRequest {
    string machine = 1;
    int32 limit = 3;
}

message GetStatesResponse {
    repeated State states = 1;
}

message State {
    string time = 1;
    string machine = 2;
    string state = 3;
    string color = 4;
    int32 value = 5;
}

message CreateStatesRequest {
    repeated State states = 1;
}

message CreateStatesResponse {
    string message = 1;
}
